# other/controllers/Book.js
@@ -28,9 +28,25 @@ module.exports.booksGET = function booksGET (req, res, next) {
 	});
 };
 
+module.exports.getBooksCount = function getBooksCount (req, res, next) {
+	
+	req.swagger.params['genre'].value ? idgenre = req.swagger.params['genre'].value : idgenre = undefined;
+	req.swagger.params['theme'].value ? idtheme = req.swagger.params['theme'].value : idtheme = undefined;
+	req.swagger.params['rating'].value ? rating = req.swagger.params['rating'].value : rating = undefined;
+
+  	BookService.getBooksCount(idgenre, idtheme, rating)
+	.then(function (response) {
+	  response = {'count' : response[0]['count(*)']}
+	  utils.writeJson(res, response);
+	})
+	.catch(function (response) {
+	  utils.writeJson(res, response);
+	});
+};
+
 module.exports.getBookById = function getBookById (req, res, next) {
   var bookId = req.swagger.params['bookId'].value;
-  Book.getBookById(bookId)
+  BookService.getBookById(bookId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
